# Aquilla12-Console

./: .gitignore  AMP_IMPLEMENTATION_SUMMARY.md  NP-C4I_Recording_Guide.docx  README.md  build-arm64.sh  deploy-to-sbc.sh  gateway_config.json  hid_panel_config.json  implementation_plan.md  install-arm64.sh  max98357a-overlay.dts  mock-sbc-server.js  package-lock.json  package.json  recorder_config.json  rock5bplus-max98357a.dts  setup-kiosk.sh  setup-max98357a.sh
.github/workflows/: build-and-release.yml
gateway/: Cargo.toml
gateway/src/: crypto.rs  main.rs
mil-conf-gateway/: README.md  audit.jsonl  requirements.txt
mil-conf-gateway/config/: endpoints.yaml  gateway.yaml  talkgroups.yaml
mil-conf-gateway/docker/: Dockerfile  docker-compose.yml
mil-conf-gateway/gateway/: __init__.py  config.py  main.py
mil-conf-gateway/gateway/codecs/: __init__.py  g711.py  g729.py  opus_codec.py  transcoder.py
mil-conf-gateway/gateway/conference/: __init__.py  ptt.py  talkgroup.py
mil-conf-gateway/gateway/jps/: __init__.py  acu_bridge.py
mil-conf-gateway/gateway/poc/: __init__.py  mcptt.py
mil-conf-gateway/gateway/rtp/: __init__.py  jitter.py  mixer.py  packet.py  session.py
mil-conf-gateway/gateway/security/: __init__.py  audit.py  srtp_wrapper.py  tls.py
mil-conf-gateway/gateway/sip/: __init__.py  parser.py  registrar.py  sdp.py
mil-conf-gateway/gateway/web/: __init__.py  api.py  events.py  server.py
mil-conf-gateway/gateway/web/static/: index.html
mil-conf-gateway/gateway/webrtc/: __init__.py  server.py
mil-conf-gateway/systemd/: mccg-gateway.service
mil-conf-gateway/tests/: test_rtp_packet.py
packaging/udev/: 60-aquilla12-hid.rules
src-tauri/: .gitignore  .taurignore  Cargo.toml  Info.plist  gateway_config.json  tauri.conf.json
src-tauri/src/: ed137.rs  hid_panel.rs  lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AudioMeter.tsx  ChannelCard.tsx  DashboardHeader.tsx  DispatchMatrixPanel.tsx  SystemConsole.tsx
src/lib/: types.ts  utils.ts
